2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix compiler warnings.
	* info/variables.h (VARIABLE_ALIST): Change type of 'value' 
	field from int * to void *.  All uses updated to cast as 
	appropriate.
	* info/variables.c (highlight_searches): Type changed to int *.
	* info/display.c (wrap_terminal_switch_rendition): Cast from 
	long * to char *.

2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/README: Remove.

2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Add more items.

2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/tests/defs.in: Add commented-out for running with 
	valgrind.

2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Mention purposes of subdirectories, couple of 
	more checks for a release.

2015-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/install-info.c (parse_input): Initialize 
	missing_basename field of spec_entry structure.
	(ensure_dirfile_exists): Don't call close on a negative value.

2015-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@display, @table): Move advice about using 
	@table inside @display to @table node.
	(@small...): Move later in chapter.
	(@verbatiminclude): Move to Include Files chapter.
	(@lisp): Remove footnote suggesting that C or Fortran could be 
	embedded inside Texinfo files.

2015-10-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/README: Mention purpose of htmlxref, 
	htmlxref-only_mono and htmlxref-only_split subdirectories.  
	(Info from Patrice.)

2015-10-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\utfeightchardefs): More definitions for 
	mathematical symbols, from Karl, from Jim Hefferon.

2015-10-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\DeclareUnicodeCharacter): If character 
	already defined, print a warning, but don't make it a fatal 
	error.  Suggestion from Oliver Heimlich, 2nd October (bug-texinfo).
